<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">쇼넥트</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_my_page">MyPage</string>
    <string name="sign_in">로그인</string>
    <string name="my_page_title">내 정보</string>
    <string name="my_page_showcase">ShowCase</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="register">회원가입</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="account_info">계정 정보</string>
    <string name="account_user">유저 정보</string>
    <string name="account_nickname">닉네임</string>

    <string-array name="genre">
        <item>연극</item>
        <item>무용 (서양/한국무용)</item>
        <item>대중무용</item>
        <item>클래식 (서양음악)</item>
        <item>국악 (한국음악)</item>
        <item>대중음악</item>
        <item>복합</item>
        <item>서커스/마술</item>
        <item>뮤지컬</item>
    </string-array>

    <string name="age_10">10대</string>
    <string name="age_20">20대</string>
    <string name="age_30">30대</string>
    <string name="age_40">40대</string>
    <string name="age_50">50대</string>
    <string name="age_60">60대</string>

    <!-- SearchFragment -->
    <string name="search_result_not">검색 결과가 없습니다</string>
    <string name="input_search">검색어를 입력해주세요</string>
    <string name="search_nextresult_not">더 이상 검색 결과가 없습니다</string>

    <string name="filter_genre">장르</string>
    <string name="filter_genre_theater">연극</string>
    <string name="filter_genre_futility">무용</string>
    <string name="filter_genre_publicfutility">대중무용</string>
    <string name="filter_genre_classic">클래식</string>
    <string name="filter_genre_korean_classic">국악</string>
    <string name="filter_genre_popular_music">대중음악</string>
    <string name="filter_genre_musical">뮤지컬</string>
    <string name="filter_genre_circus">서커스/마술</string>
    <string name="filter_genre_mix">복합</string>

    <string name="filter_children">아동</string>
    <string name="filter_children_title">어린이시청</string>
    <string name="filter_children_possible">가능</string>
    <string name="filter_children_impossible">불가능</string>

    <string name="filter_addr">지역</string>
    <string name="filter_addr_seoul">서울</string>
    <string name="filter_addr_incheon">인천</string>
    <string name="filter_addr_daejeon">대전</string>
    <string name="filter_addr_daegu">대구</string>
    <string name="filter_addr_gwangju">광주</string>
    <string name="filter_addr_pusan">부산</string>
    <string name="filter_addr_ulsan">울산</string>
    <string name="filter_addr_sejong">세종</string>
    <string name="filter_addr_gyeonggi">경기</string>
    <string name="filter_addr_chungcheongbookdo">충북</string>
    <string name="filter_addr_chungcheongnamdo">충남</string>
    <string name="filter_addr_jeollabookdo">전북</string>
    <string name="filter_addr_jeollanamdo">전남</string>
    <string name="filter_addr_gyeongsangbookdo">경북</string>
    <string name="filter_addr_gyeongsangnamdo">경남</string>
    <string name="filter_addr_gangwon">강원</string>
    <string name="filter_addr_jeju">제주</string>

    <string name="filter_date">날짜</string>
    <string name="filter_choose">조건 검색</string>
    <string name="nickname">닉네임</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="email_warning">이메일 형식으로 입력해주세요</string>
    <string name="email_duplicate">중복된 이메일이 존재합니다</string>
    <string name="nickname_duplicate">중복된 닉네임이 존재합니다</string>
    <string name="password_warning">6자 이상 입력해주세요</string>
    <string name="password_confirm_warning">비밀번호가 다릅니다</string>
    <string name="name_warning">2글자 이상 입력해주세요</string>
    <string name="sign_in_fail">계정 정보가 틀렸습니다</string>
    <string name="logout">로그아웃</string>
    <string name="home_top_upcoming_text">공연예정</string>
    <string name="server_error">서버 오류가 발생하였습니다</string>

    <string name="count_key">리뷰수</string>
    <string name="count">회</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="modal_logout_title">로그아웃 하시겠습니까?</string>
    <string name="show_more">더보기</string>

    <string name="ticket_show_name_title">제목</string>
    <string name="ticket_runtime_title">런타임</string>
    <string name="ticket_price_title">가격</string>
    <string name="ticket_place_title">공연장</string>
    <string name="ticket_cast_title">출연진</string>
    <string name="ticket_product_title">제작</string>
    <string name="bookmark_title">관심목록</string>
    <string name="detail_show_state_title">공연 상태</string>
    <string name="detail_period_title">공연 기간</string>
    <string name="detail_time_title">공연 시간</string>
    <string name="detail_age_title">관람 연령</string>
    <string name="detail_genre_title">장르</string>
    <string name="dattai">회원탈퇴</string>

    <string name="app_end_check">한 번 더 누르면 종료됩니다</string>
    <string name="question_quit">정말로 탈퇴하시겠습니까?</string>
    <string name="home_kid_able">어린이 관람 가능 공연</string>
    <string name="home_recommend">HOT 추천</string>
    <string name="showcase_empty">리뷰를 남겨주시면\n당신의 리뷰 목록이 담깁니다</string>
    <string name="bookmarks_empty">당신의 관심을 담아주세요!</string>
    <string name="shownect_title">SHOWNECT</string>
    <string name="need_login">로그인하시고\n더 다양한 정보를 보세요!</string>
    <string name="warning_age_gender">성별과 연령대를 선택해주세요</string>
    <string name="reviews">리뷰</string>
    <string name="expectations">기대평</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good">기대돼요</string>
    <string name="bad">글쎄요</string>
    <string name="warning_good_bad">기대평을 선택해주세요</string>
    <string name="write_expectation">한 줄 기대평 쓰기</string>
    <string name="write_in_30">30자 이내로 작성해주세요</string>
    <string name="warning_expectation">30자 이내로 작성해주세요.</string>
    <string name="sakusei">작성</string>
    <string name="already_sakusei">이미 기대평을 작성하였습니다</string>
    <string name="already_point">이미 리뷰를 작성하였습니다</string>
    <string name="empty_expectations">아직 기대평이 없습니다\n작성해주세요</string>
    <string name="more_expectation_text">기대평 더 보기</string>
    <string name="write_review">리뷰 작성</string>
    <string name="more_review_text">리뷰 더보기</string>
    <string name="empty_reviews">아직 리뷰가 없습니다\n리뷰를 작성해주세요</string>
    <string name="empty_star_warning">점수를 선택해주세요</string>
    <string name="start_point_title">별점</string>

    <!-- 상세화면 지도 맵 -->
    <string name="map">지도</string>
    <string name="consert_hall">공연장</string>
    <string name="consert_hall_location">주소</string>
    <string name="hall_call_number">전화번호</string>
    <string name="hall_homepage">홈페이지</string>
    <string name="parking_area">주차시설</string>
    <string name="map_marker_in_place">원위치</string>

    <!-- 검색화면 리셋 및 랭킹 화면 -->
    <string name="search_result_reset">검색 결과가 초기화 되었습니다</string>
    <string name="search_reset_impossible">검색 결과를 불러오는 중입니다 \n검색이 완료된 후에 초기화를 시도해주세요</string>
    <string name="title_rank">Rank</string>
    <string name="rank_title">장르별 랭킹</string>
    <string name="rank_chip_day">일간</string>
    <string name="rank_chip_week">주간</string>
    <string name="rank_chip_month">월간</string>
    <string name="rank_chip_all">전체</string>
    <string name="rank_chip_drama">연극</string>
    <string name="rank_chip_musical">뮤지컬</string>
    <string name="rank_chip_popular_music">대중음악</string>
    <string name="rank_chip_classic">클래식</string>
    <string name="rank_chip_dance">무용</string>
    <string name="rank_chip_korea_music">국악</string>
    <string name="rank_chip_magic">서커스/마술</string>
    <string name="rank_chip_complex">복합</string>

    <!-- 네트워크 확인 -->
    <string name="network_check">확인</string>
    <string name="network_check_necessary">네트워크 연결 필요</string>
    <string name="network_check_necessary_message">앱을 사용하려면 인터넷 연결이 필요합니다.</string>

    <!-- 통계화면 -->
    <string name="stats_my_review_score_average">리뷰 점수 평균</string>
    <string name="stats_my_expectation_count">기대평 총 갯수</string>
    <string name="stats_my_review_date">날짜별 리뷰 분포</string>
    <string name="stats_my_review_genre">장르별 리뷰 분포</string>
    <string name="my_stats">공연 지수</string>
    <string name="stats_genre">장르별(%)</string>
    <string name="ticket_area">공연 지역</string>
    <string name="detail_title_runtime">런타임</string>
    <string name="title_mypage">내 정보</string>
    <string name="mypage_showcase">쇼케이스</string>
    <string name="mypage_interest">관심목록</string>
    <string name="login_dialog_message">로그인이 필요한 서비스입니다.\n 로그인하시겠습니까?</string>
</resources>
