<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nbc.curtaincall.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rank"
        android:name="com.nbc.curtaincall.presentation.rank.RankFragment"
        android:label="@string/title_rank"
        tools:layout="@layout/fragment_rank" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.nbc.curtaincall.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_page"
        android:name="com.nbc.curtaincall.presentation.mypage.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_my_page">
        <action
            android:id="@+id/action_mypage_to_showcase"
            app:destination="@id/navigation_mypage_showcase"
            app:popUpTo="@id/navigation_my_page"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_mypage_to_interest"
            app:destination="@id/navigation_mypage_interest"
            app:popUpTo="@id/navigation_my_page"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_mypage_showcase"
        android:name="com.nbc.curtaincall.presentation.mypage.ShowCaseFragment"
        android:label="@string/mypage_showcase"
        tools:layout="@layout/fragment_my_page_showcase" />
    <fragment
        android:id="@+id/navigation_mypage_interest"
        android:name="com.nbc.curtaincall.presentation.mypage.BookmarkFragment"
        android:label="@string/mypage_interest"
        tools:layout="@layout/fragment_my_page_bookmark" />
</navigation>