<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.auth.SignInActivity">

    <TextView

        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shownect_title"
        android:textColor="@color/primary_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="144dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <EditText
            android:id="@+id/et_input_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/input_background_color"
            android:hint="@string/email"
            android:paddingHorizontal="12dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/input_text_color"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_email_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/email_warning"
        android:textColor="@color/primary_color"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_warning">

        <EditText
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/input_background_color"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/input_text_color"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_password_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/password_warning"
        android:textColor="@color/primary_color"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_password" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_warning" />

    <TextView
        android:id="@+id/tv_fail_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in_fail"
        android:textColor="@color/primary_color"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/cv_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_register">

        <android.widget.Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gradient"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>